# jqkv

./: .dockerignore  .gitignore  AGENT.md  AGENTS.md  Cargo.toml  Dockerfile  PLAN.md  README.md  docker-compose.yml
.github/workflows/: docker-publish.yml
scripts/: hurl_tests.sh  perf.sh  perf_scenario.sh
src/: cbor.rs  jq.rs  lmdb.rs  main.rs  service.rs  streaming.rs
tests/hurl/: basic.hurl  cleanup.hurl  ready.hurl
