[package]
name = "store"
version = "0.1.0"
edition = "2024"

[dependencies]
heed = "0.22.0"
http-body-util = "0.1.3"
hyper = { version = "1.8.1", features = ["http2", "server"] }
hyper-util = { version = "0.1.19", features= ["full"] }
jaq-core = "2.2.1"
jaq-json = { version = "1.1.3", features = ["serde_json"] }
jaq-std = "2.1.2"
lz4 = "1.28.1"
minicbor-serde = { version = "0.6.2", features = ["std"] }
percent-encoding = "2.3.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "net"] }
url = "2.5.7"
